--- a/.gitignore
+++ b/.gitignore
@@ -3500,3 +3500,121 @@ Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Scripts/python_d.ex
 Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Scripts/python.exe
 Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Scripts/pythonw_d.exe
 Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Scripts/pythonw.exe
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/test_54-8-TestImplicityWait.py
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/test_55-8-TestExplicityWait.py
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/test_56-9-TestCheckbox.py
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/__pycache__/55-8-TestExplicityWait.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/__pycache__/test_54-8-TestImplicityWait.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/__pycache__/test_54-8-TestImplicityWait.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/__pycache__/test_55-8-TestExplicityWait.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/__pycache__/test_55-8-TestExplicityWait.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/__pycache__/test_56-9-TestCheckbox.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/__pycache__/test_56-9-TestCheckbox.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/async_generator/_tests/__pycache__/conftest.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/async_generator/_tests/__pycache__/test_async_generator.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/async_generator/_tests/__pycache__/test_util.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/h11/tests/__pycache__/test_against_stdlib_http.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/h11/tests/__pycache__/test_connection.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/h11/tests/__pycache__/test_events.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/h11/tests/__pycache__/test_headers.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/h11/tests/__pycache__/test_helpers.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/h11/tests/__pycache__/test_io.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/h11/tests/__pycache__/test_receivebuffer.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/h11/tests/__pycache__/test_state.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/h11/tests/__pycache__/test_util.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/pytest-7.1.3.dist-info/entry_points.txt
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/pytest-7.1.3.dist-info/INSTALLER
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/pytest-7.1.3.dist-info/LICENSE
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/pytest-7.1.3.dist-info/METADATA
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/pytest-7.1.3.dist-info/RECORD
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/pytest-7.1.3.dist-info/REQUESTED
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/pytest-7.1.3.dist-info/top_level.txt
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/pytest-7.1.3.dist-info/WHEEL
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/pytest_forked/__pycache__/__init__.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/pytest_forked/__pycache__/__init__.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/sniffio/_tests/__pycache__/test_sniffio.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/conftest.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_asyncgen.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_guest_mode.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_instrumentation.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_io.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_ki.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_local.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_mock_clock.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_multierror.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_parking_lot.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_run.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_thread_cache.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_tutil.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_unbounded_queue.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_util.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/_core/tests/__pycache__/test_windows.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/testing/__pycache__/_trio_test.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/conftest.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_abc.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_channel.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_contextvars.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_deprecate.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_exports.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_file_io.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_highlevel_generic.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_highlevel_open_tcp_listeners.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_highlevel_open_tcp_stream.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_highlevel_open_unix_stream.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_highlevel_serve_listeners.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_highlevel_socket.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_highlevel_ssl_helpers.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_path.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_scheduler_determinism.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_signals.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_socket.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_ssl.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_subprocess.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_sync.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_testing.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_threads.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_timeouts.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_unix_pipes.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_util.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_wait_for_object.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/__pycache__/test_windows_pipes.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/trio/tests/tools/__pycache__/test_gen_exports.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/__init__.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/__init__.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/_version.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/_version.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/dsession.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/dsession.cpython-310-pytest-7.1.2.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/dsession.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/looponfail.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/looponfail.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/newhooks.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/newhooks.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/plugin.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/plugin.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/remote.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/remote.cpython-310-pytest-7.1.2.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/remote.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/report.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/report.cpython-310-pytest-7.1.2.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/report.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/workermanage.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/workermanage.cpython-310-pytest-7.1.2.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/__pycache__/workermanage.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/__init__.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/__init__.cpython-310-pytest-7.1.2.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/__init__.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/each.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/each.cpython-310-pytest-7.1.2.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/each.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/load.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/load.cpython-310-pytest-7.1.2.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/load.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadfile.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadfile.cpython-310-pytest-7.1.2.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadfile.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadgroup.cpython-310-pytest-7.1.2.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadgroup.cpython-310-pytest-7.1.3.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadscope.cpython-310-pytest-6.2.4.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadscope.cpython-310-pytest-7.1.2.pyc
+Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadscope.cpython-310-pytest-7.1.3.pyc
