Trabajando en test 1 del ejercicio 135

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,32 +1,76 @@
 {
     "cSpell.words": [
+        "abierta",
+        "accion",
         "agregado",
         "agregarprod",
+        "arrastro",
         "cada",
         "catalogo",
+        "Chexe",
+        "clickeo",
+        "convertir",
+        "coordenadas",
+        "copiado",
+        "copiar",
+        "corresponde",
         "cuatro",
+        "debe",
+        "definir",
+        "derecho",
         "dismissable",
+        "doble",
         "elemento",
+        "elementos",
+        "enconto",
+        "encontro",
         "Entrando",
+        "Escribiendo",
         "Esto",
         "exito",
         "exitosa",
+        "Fiexe",
         "floatwrap",
         "Funciones",
         "Globales",
         "Gtin",
+        "hubo",
         "incorrecta",
+        "indice",
+        "ingresado",
+        "ingresar",
         "inicio",
         "insertar",
         "Lista",
+        "menor",
+        "menos",
         "navegar",
+        "numerico",
+        "obtuvo",
+        "Opcion",
+        "Pagina",
+        "parametro",
+        "pegado",
+        "pegar",
+        "posible",
+        "proceso",
+        "pudo",
+        "puede",
+        "realizar",
         "Salida",
+        "seleccionada",
+        "selecciono",
+        "selectordrag",
+        "selectordrop",
         "tabindex",
         "texto",
         "Tiempo",
         "tinymce",
+        "tipo",
         "usuario",
+        "valida",
         "validacion",
-        "validar"
+        "validar",
+        "varios"
     ]
 }
