cambios en el ejercicio 135

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
         "pudo",
         "puede",
         "realizar",
+        "REVISAR",
         "Salida",
         "seleccionada",
         "selecciono",
