--- a/.gitignore
+++ b/.gitignore
@@ -3618,3 +3618,4 @@ Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/x
 Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadscope.cpython-310-pytest-6.2.4.pyc
 Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadscope.cpython-310-pytest-7.1.2.pyc
 Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadscope.cpython-310-pytest-7.1.3.pyc
+__pycache__
