--- a/.gitignore
+++ b/.gitignore
@@ -3620,3 +3620,4 @@ Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/x
 Seccion 23 - Entornos Virtuales - Virtualenv/Maquina_uno/MV1/Lib/site-packages/xdist/scheduler/__pycache__/loadscope.cpython-310-pytest-7.1.3.pyc
 __pycache__
 Seccion 27 - Nueva Sección Pytest Reportes/*.html
+Seccion 27 - Nueva Sección Pytest Reportes/assets
